final supabase + final prompt version of backend

--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -16,15 +16,16 @@ primary_region = 'sjc'
   force_https = true
   auto_stop_machines = 'stop'
   auto_start_machines = true
-  min_machines_running = 0
+  min_machines_running = 1
   processes = ['app']
 
   [[http_service.checks]]
     interval = '15s'
-    timeout = '2s'
+    timeout = '10s'
     grace_period = '5s'
     method = 'GET'
     path = '/health'
 
 [[vm]]
   size = 'shared-cpu-1x'
+  memory = '1gb'
